WebCore/editing/markup.cpp
@@ -95,6 +95,7 @@ static void appendAttributeValue(Vector<UChar>& result, const String& attr)
     unsigned lastCopiedFrom = 0;
 
     static const String ampEntity("&amp;");
+    static const String gtEntity("&gt;");
     static const String ltEntity("&lt;");
     static const String quotEntity("&quot;");
     static const String nbspEntity("&nbsp;");
@@ -110,6 +111,11 @@ static void appendAttributeValue(Vector<UChar>& result, const String& attr)
             case '<':
                 result.append(uchars + lastCopiedFrom, i - lastCopiedFrom);
                 append(result, ltEntity);
+                lastCopiedFrom = i + 1;
+                break;
+            case '>':
+                result.append(uchars + lastCopiedFrom, i - lastCopiedFrom);
+                append(result, gtEntity);
                 lastCopiedFrom = i + 1;
                 break;
             case '"':
@@ -136,6 +142,7 @@ static String escapeContentText(const String& in)
     unsigned lastCopiedFrom = 0;
 
     static const String ampEntity("&amp;");
+    static const String gtEntity("&gt;");
     static const String ltEntity("&lt;");
     static const String nbspEntity("&nbsp;");
 
@@ -154,6 +161,11 @@ static String escapeContentText(const String& in)
             case '<':
                 s.append(characters + lastCopiedFrom, i - lastCopiedFrom);
                 append(s, ltEntity);
+                lastCopiedFrom = i + 1;
+                break;
+            case '>':
+                s.append(characters + lastCopiedFrom, i - lastCopiedFrom);
+                append(s, gtEntity);
                 lastCopiedFrom = i + 1;
                 break;
             case noBreakSpace:
@@ -176,6 +188,7 @@ static void appendEscapedContent(Vector<UChar>& result, pair<const UChar*, size_
     unsigned lastCopiedFrom = 0;
     
     static const String ampEntity("&amp;");
+    static const String gtEntity("&gt;");
     static const String ltEntity("&lt;");
     static const String nbspEntity("&nbsp;");
 
@@ -190,6 +203,11 @@ static void appendEscapedContent(Vector<UChar>& result, pair<const UChar*, size_
             case '<':
                 result.append(uchars + lastCopiedFrom, i - lastCopiedFrom);
                 append(result, ltEntity);
+                lastCopiedFrom = i + 1;
+                break;
+            case '>':
+                result.append(uchars + lastCopiedFrom, i - lastCopiedFrom);
+                append(result, gtEntity);
                 lastCopiedFrom = i + 1;
                 break;
             case noBreakSpace:
